[package]
name = "have_fun_os"
version = "0.1.0"
authors = ["lingxiang.wang <lingxiang.wang@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
